syntax = "proto3";

package ua.gov.diia.publicservicecatalog;
option java_multiple_files = true;
option java_package = "ua.gov.diia.publicservicecatalog";

enum PublicServiceCategoryStatus {
    active = 0;
    inactive = 1;
}
